--- a/references.html
+++ b/references.html
@@ -49,7 +49,7 @@ div.csl-indent {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./reading_and_tidying_data.html" rel="prev">
+<link href="./topic_modelling.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -113,7 +113,7 @@ div.csl-indent {
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link">Preface</a>
+  <a href="./index.html" class="sidebar-item-text sidebar-link">Course overview</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -129,6 +129,31 @@ div.csl-indent {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./reading_and_tidying_data.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Reading and tidying data</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./working_with_strings.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">Working with strings</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./publishing_with_r.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">5</span>&nbsp; <span class="chapter-title">Publishing with R</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./summarizing_data.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Summarizing data</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./visualizing_data.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Visualizing data</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./topic_modelling.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Topic Modelling</span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -169,14 +194,26 @@ Blei, David M., and Padhraic Smyth. 2017. <span>“Science and Data
 Science.”</span> <em>Proceedings of the National Academy of
 Sciences</em> 114 (33): 8689–92. <a href="https://doi.org/10.1073/pnas.1702076114">https://doi.org/10.1073/pnas.1702076114</a>.
 </div>
+<div id="ref-healy2018" class="csl-entry" role="doc-biblioentry">
+Healy, Kieran. 2018. <em>Data Visualization: A Practical
+Introduction</em>. Princeton, NJ: Princeton University Press.
+</div>
 <div id="ref-wickham2014" class="csl-entry" role="doc-biblioentry">
 Wickham, Hadley. 2014. <span>“Tidy Data.”</span> <em>Journal of
 Statistical Software</em> 59 (September): 1–23. <a href="https://doi.org/10.18637/jss.v059.i10">https://doi.org/10.18637/jss.v059.i10</a>.
+</div>
+<div id="ref-wickham2016a" class="csl-entry" role="doc-biblioentry">
+———. 2016. <em>Ggplot2</em>. Springer International Publishing. <a href="https://doi.org/10.1007/978-3-319-24277-4">https://doi.org/10.1007/978-3-319-24277-4</a>.
 </div>
 <div id="ref-wickham2016" class="csl-entry" role="doc-biblioentry">
 Wickham, Hadley, and Garrett Grolemund. 2016. <em>R for Data Science:
 Import, Tidy, Transform, Visualize, and Model Data</em>. First edition.
 Sebastopol, CA: O’Reilly.
+</div>
+<div id="ref-wilke2019" class="csl-entry" role="doc-biblioentry">
+Wilke, C. 2019. <em>Fundamentals of Data Visualization: A Primer on
+Making Informative and Compelling Figures</em>. First edition.
+Sebastopol, CA: O’Reilly Media.
 </div>
 </div>
 
@@ -318,8 +355,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./reading_and_tidying_data.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">Reading and tidying data</span></span>
+      <a href="./topic_modelling.html" class="pagination-link">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">Topic Modelling</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
