--- a/intro.html
+++ b/intro.html
@@ -193,7 +193,7 @@ div.csl-indent {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./shinyapps_part2.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">12</span>&nbsp; <span class="chapter-title">ShinyApps part 2</span></span></a>
+ <span class="menu-text"><span class="chapter-number">12</span>&nbsp; <span class="chapter-title">ShinyApps</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -229,7 +229,6 @@ div.csl-indent {
   <li><a href="#miscellaneous-datasets" id="toc-miscellaneous-datasets" class="nav-link" data-scroll-target="#miscellaneous-datasets"><span class="header-section-number">1.5.4</span> Miscellaneous datasets</a></li>
   </ul></li>
   <li><a href="#homework" id="toc-homework" class="nav-link" data-scroll-target="#homework"><span class="header-section-number">1.6</span> Homework</a></li>
-  <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references"><span class="header-section-number">1.7</span> References</a></li>
   </ul>
 </nav>
     </div>
@@ -369,9 +368,6 @@ div.csl-indent {
 <li><p>Finding data sources that might be suitable for that topic.</p></li>
 <li><p>Starting a draft of your problem statement.</p></li>
 </ol>
-</section>
-<section id="references" class="level2" data-number="1.7">
-<h2 data-number="1.7" class="anchored" data-anchor-id="references"><span class="header-section-number">1.7</span> References</h2>
 
 
 <div id="refs" class="references csl-bib-body hanging-indent" role="list" style="display: none">
