--- a/publishing_with_r.html
+++ b/publishing_with_r.html
@@ -230,7 +230,7 @@ div.csl-indent {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./shinyapps_part2.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">12</span>&nbsp; <span class="chapter-title">ShinyApps part 2</span></span></a>
+ <span class="menu-text"><span class="chapter-number">12</span>&nbsp; <span class="chapter-title">ShinyApps</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -264,7 +264,6 @@ div.csl-indent {
   <li><a href="#keeping-it-simple" id="toc-keeping-it-simple" class="nav-link" data-scroll-target="#keeping-it-simple"><span class="header-section-number">5.4.2</span> keeping it simple</a></li>
   </ul></li>
   <li><a href="#summary" id="toc-summary" class="nav-link" data-scroll-target="#summary"><span class="header-section-number">5.5</span> Summary</a></li>
-  <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references"><span class="header-section-number">5.6</span> References</a></li>
   </ul>
 </nav>
     </div>
@@ -748,9 +747,6 @@ editor: visual
 <h2 data-number="5.5" class="anchored" data-anchor-id="summary"><span class="header-section-number">5.5</span> Summary</h2>
 <p>Quarto documents combine the data processing, analysis and reporting elements of the data science workflow in a single location. And the visual tool brings the Quarto document writing experience closer to writing in Word or by hiding the code and letting you visualize the format of your document as you write them.</p>
 <p>To get you used to Quarto, we will use it for the remaining course labs. You are also encouraged to use it for your project.</p>
-</section>
-<section id="references" class="level2" data-number="5.6">
-<h2 data-number="5.6" class="anchored" data-anchor-id="references"><span class="header-section-number">5.6</span> References</h2>
 
 
 <div id="refs" class="references csl-bib-body hanging-indent" role="list" style="display: none">
