--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Introduction to Data Science is a hands-on course for students with no or minimal coding experience. We will learn to use R to collect, manipulate, analyze, and visualize data.</p>
 <section id="schedule" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="schedule">Schedule</h2>
-<p>For the Winter 2024 semester, the course will be online. You can also book online assistance with me throughout the semester using this <a href="https://calendly.com/pmongeon/">link</a>.</p>
+<p>For the Winter 2024 semester, the course will be online. You can book online assistance with me throughout the semester using this <a href="https://calendly.com/pmongeon/">link</a>. For the month of January only, there will be optional in-person support available in ROWE 3080 on Tuesdays from 11:30 am to 2:30 pm.</p>
 <div class="cell">
 <div class="cell-output-display">
 <table class="lightable-classic table table-sm table-striped small" data-quarto-postprocess="true">
