--- a/intro.html
+++ b/intro.html
@@ -273,7 +273,7 @@ div.csl-indent {
 <li><p><strong>Problem statement</strong>: The data science process is filled with decisions. And there is no better way to get lost and frustrated than to not have an adequate and shared understanding of the problem that needs to be solved or the knowledge gap that needs to be filled. Problems are all around us, but not all of them are good data science problems. Good data science problem are <strong>relevant</strong> (they have a clear purpose) and are solvable with <strong>available data</strong>. At the end of this step, you have a clear research objective and clear research questions.</p></li>
 <li><p><strong>Data collection</strong> involves a series of steps aimed at gathering all the data that you will need for your project, such as finding relevant data sources, importing the data, and assessing its suitability for the problem at hand. At the end of this step, you have at hand all the data pieces that you will need for your project.</p></li>
 <li><p><strong>Pre-processing (tidying)</strong> involves structuring your data in a format suitable for analysis, and cleaning your data to remove errors, duplicates, etc. At the end of this step, you have a data set that is ready to produce valid answers to your research questions.</p></li>
-<li><p><strong>Analysis</strong> is about describing, analyzing, and visualizing the data. At the end of this step, you have produced tables and graphs that</p></li>
+<li><p><strong>Analysis</strong> is about describing, analyzing, and visualizing the data. At the end of this step, you have produced tables and graphs that are informative in the context of your problem statement.</p></li>
 <li><p><strong>Interpretation</strong> is about assigning meaning to the analyzed data and draw conclusions from it. At the end of this step you have answers to your research questions.</p></li>
 <li><p><strong>Communication</strong> is about transferring the new knowledge to its intended audience(s). At the end of this step, you have a clear, transparent, and effective report.</p></li>
 </ul>
@@ -291,7 +291,7 @@ div.csl-indent {
 </section>
 <section id="objectives" class="level3" data-number="1.4.2">
 <h3 data-number="1.4.2" class="anchored" data-anchor-id="objectives"><span class="header-section-number">1.4.2</span> Objectives</h3>
-<p>The objective, of course, is to fix the problem or fill the gap identified in the problem statement. But here the goal is expressed <em>as</em> a research objective. It also provides information on the data set, and more details that help delineating the project. here is an example:</p>
+<p>The objective, of course, is to fix the problem or fill the gap identified in the problem statement. But here the goal is expressed <em>as</em> a research objective. It also provides information on the data set, and more details that help delineating the project. Here is an example:</p>
 <blockquote class="blockquote">
 <p>The goal of this project is to help determine the optimal distribution of National research funds by applying data science methods to analyze data on the research funding, output and impact of Quebec researchers over a period of 15 years (1998-2012).</p>
 </blockquote>
@@ -351,7 +351,7 @@ div.csl-indent {
 </section>
 <section id="miscellaneous-datasets" class="level3" data-number="1.5.4">
 <h3 data-number="1.5.4" class="anchored" data-anchor-id="miscellaneous-datasets"><span class="header-section-number">1.5.4</span> Miscellaneous datasets</h3>
-<p>There is an overwhelming amount of data available on the Web, so here is a non-exhaustive list of data sources that you might fight useful.</p>
+<p>There is an overwhelming amount of data available on the Web, so here is a non-exhaustive list of data sources that you might find useful.</p>
 <ul>
 <li>Kaggle (<a href="https://www.kaggle.com" class="uri">https://www.kaggle.com</a>)</li>
 <li>Awesome public datasets (<a href="https://github.com/awesomedata/awesome-public-datasets" class="uri">https://github.com/awesomedata/awesome-public-datasets</a>)</li>
