--- a/publishing_with_r.html
+++ b/publishing_with_r.html
@@ -366,13 +366,13 @@ editor: visual
 <p><code>```{r}</code></p>
 <p><code>some r code</code></p>
 <p><code>```</code></p>
-<p>We can also set options for the code chunks to tell R whether to display the code itself, its output, or both. <code>#| echo : FALSE</code> tells R not to display the code in the published document. <code>#| eval : FALSE</code> tells R not to execute the code (so the output of the code will not be displayed in the published document because there will be no output). Here is an example of each option. The code is on the left, and the HTML output is on the right.</p>
+<p>We can also set options for the code chunks to tell R whether to display the code itself, its output, or both. <code>#| echo: FALSE</code> tells R not to display the code in the published document. <code>#| eval: FALSE</code> tells R not to execute the code (so the output of the code will not be displayed in the published document because there will be no output). Here is an example of each option. The code is on the left, and the HTML output is on the right.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="files/code_chunks.jpg" class="img-fluid figure-img"></p>
 </figure>
 </div>
-<p>Other useful code chunk options are <code>#| message : FALSE</code>, <code>#| warning : FALSE</code>, and <code>#| error : FALSE</code>. Sometimes your code will produce error messages, warnings, or other messages. Typically, we do not want these to show in our documents, so setting these options to FALSE is the way to go.</p>
+<p>Other useful code chunk options are <code>#| message: FALSE</code>, <code>#| warning: FALSE</code>, and <code>#| error: FALSE</code>. Sometimes your code will produce error messages, warnings, or other messages. Typically, we do not want these to show in our documents, so setting these options to FALSE is t,he way to go.</p>
 </section>
 </section>
 <section id="visual-mode" class="level3" data-number="5.3.3">
@@ -745,7 +745,7 @@ editor: visual
 </section>
 <section id="summary" class="level2" data-number="5.5">
 <h2 data-number="5.5" class="anchored" data-anchor-id="summary"><span class="header-section-number">5.5</span> Summary</h2>
-<p>Quarto documents combine the data processing, analysis and reporting elements of the data science workflow in a single location. And the visual tool brings the Quarto document writing experience closer to writing in Word or by hiding the code and letting you visualize the format of your document as you write them.</p>
+<p>Quarto documents combine the data processing, analysis and reporting elements of the data science workflow in a single location. The visual tool brings the Quarto document writing experience closer to writing in Word or by hiding the code and letting you visualize the format of your document as you write them.</p>
 <p>To get you used to Quarto, we will use it for the remaining course labs. You are also encouraged to use it for your project.</p>
 
 
